MVC de categoria criada

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_ENV=local
 APP_KEY=base64:L9mo9u4M6Qgm9eIvJtqnxZaPbvxp/4SXNjRLVSWTZOk=
 APP_DEBUG=true
 APP_URL=http://127.0.0.1:8000
-APP_NAME="Sistema"
+APP_NAME="cardapio_online"
 
 
 
@@ -11,9 +11,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_DATABASE= cardapio_online
+DB_USERNAME= root
+DB_PASSWORD= 16018795
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
